[gd_scene load_steps=2 format=3 uid="uid://b7y5tvi7f353l"]

[ext_resource type="Script" uid="uid://dn40nnmahws5d" path="res://scenes/UI/RepairPanel.gd" id="1_s7suj"]

[node name="RepairPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
script = ExtResource("1_s7suj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(380, 180)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "RÃ©parations"

[node name="InterventionsList" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="PaymentButton" type="Button" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Mettre en attente paiement"

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Fermer"

[connection signal="pressed" from="Panel/VBoxContainer/PaymentButton" to="." method="_on_payment_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
